# tutor-contrib-platform-notifications

./: MANIFEST.in  Makefile  README.rst  catalog-info.yaml  pyproject.toml
.github/workflows/: integration-test.yml  release.yml
tutornotifications/: plugin.py
tutornotifications/patches/: mfe-dockerfile-post-npm-install  mfe-lms-production-settings
tutornotifications/templates/notifications/tasks/lms/: waffle_flags
tutorplatformnotifications/: plugin.py
tutorplatformnotifications/patches/: lms-env  mfe-dockerfile-post-npm-install  mfe-env-config-runtime-definitions  mfe-lms-production-settings  openedx-common-settings
tutorplatformnotifications/templates/notifications/tasks/lms/: waffle_flags
