# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-notifications"
description = "A Tutor plugin to manage configuration and plugin slots for the Notifications tray feature."
authors = [
  { name = "Ty Hob"},
  { name = "OpenCraft", email = "help@opencraft.com" },
]
license = { text = "AGPL-3.0-only" }
maintainers = [
    { name = "OpenCraft", email = "help@opencraft.com" },
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=20.0.0,<21.0.0",
    "tutor-mfe>=20.0.0,<21.0.0",
]

# These fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=20.0.0,<21.0.0",
    "ruff",
]

[tool.hatch.version]
path = "tutornotifications/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/openedx/tutor-contrib-notifications#readme"
Issues = "https://github.com/openedx/tutor-contrib-notifications/issues"
Source = "https://github.com/openedx/tutor-contrib-notifications"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutornotifications"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutornotifications"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
notifications = "tutornotifications.plugin"

[tool.hatch.envs.default.env-vars]
SRC_DIRS = "./tutornotifications"

[tool.hatch.envs.quality]
dependencies = [
    "ruff",
]

[tool.hatch.envs.quality.scripts]
test = [
    "test-lint",
    "test-types",
    "test-format",
]
test-lint = "ruff check {env:SRC_DIRS}"
test-format = "ruff format --check --diff {env:SRC_DIRS}"
test-types = "mypy --exclude=templates --ignore-missing-imports --implicit-reexport --strict {env:SRC_DIRS}"
format = "ruff format {env:SRC_DIRS}"
fix-lint = "ruff check --fix {env:SRC_DIRS}"
