# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[project]
name = "tutor-contrib-platform-notifications"
description = "A Tutor plugin to manage configuration and plugin slots for the Notifications tray feature."
authors = [
  { name = "Ty Hob"},
  { name = "OpenCraft", email = "help@opencraft.com" },
]
dynamic = ["version"]
license = { text = "AGPL-3.0-only" }
maintainers = [
    { name = "OpenCraft", email = "help@opencraft.com" },
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor >= 20,<21.0.0",
    "tutor-mfe >= 20,<21.0.0",
]

[project.optional-dependencies]
dev = [
    "tutor[dev] @ git+https://github.com/overhangio/tutor.git@ulmo",
    "ruff",
]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/openedx/tutor-contrib-platform-notifications#readme"
Issues = "https://github.com/openedx/tutor-contrib-platform-notifications/issues"
Source = "https://github.com/openedx/tutor-contrib-platform-notifications"


[project.entry-points."tutor.plugin.v1"]
notifications = "tutorplatformnotifications.plugin"

[tool.setuptools.dynamic]
version = {attr = "tutorplatformnotifications.__about__.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tutorplatformnotifications*"]
